Set quick add button color.

--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -3,7 +3,7 @@
         <ul class="list-inline text-center">
             <li class="pull-left">
                 <div class="btn-group">
-                    <button class="btn btn-default btn-lg dropdown-toggle" type="button"
+                    <button class="btn btn-default btn-info btn-lg dropdown-toggle" type="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-plus fa-fw"></i>Quick Add <span class="caret"></span>
                     </button>
