Add service for selecting a process template.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -195,6 +195,7 @@
 <script src="application/directives/reviews-list.js"></script>
 <script src="application/directives/measurements-list.js"></script>
 <script src="application/services/select-items-service.js"></script>
+<script src="application/services/select-process-template.js"></script>
 <script src="application/services/file-type-service.js"></script>
 <script src="application/services/user-service.js"></script>
 <script src="application/services/alert-service.js"></script>
