--- a/website/app/application/core/projects/project/processes/create/process-settings.html
+++ b/website/app/application/core/projects/project/processes/create/process-settings.html
@@ -1,12 +1,13 @@
 <div>
+    <h4>Process Setup</h4>
     <div class="row" ng-form="settingForm" ng-repeat="setting in settings">
         <div ng-switch="setting.property._type">
             <!--------- number --------->
             <div ng-switch-when="number">
-                <label class="col-xs-3 control-label">
+                <label class="col-xs-4 control-label">
                     {{::setting.property.name}}
                     <i ng-if="setting.property.required"
-                       class="fa fa-fw fa-asterisk text-danger"></i>
+                       class="fa fa-asterisk text-danger"></i>
                 </label>
 
                 <div class="col-xs-6">
@@ -40,8 +41,8 @@
             </div>
 
             <!--------- selection --------->
-            <div ng-switch-when="selection"><label class="col-xs-3 control-label"> {{::setting.property.name}}
-                <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+            <div ng-switch-when="selection"><label class="col-xs-4 control-label"> {{::setting.property.name}}
+                <i ng-if="setting.property.required" class="fa fa-asterisk text-danger"></i> </label>
 
                 <div class="col-xs-6">
                     <div class="col-xs-8"><select ng-model="setting.property.value" data-placeholder="Choose"
@@ -61,14 +62,15 @@
                             <span class="col-xs-4" ng-if="setting.property.units.length !== 0">
                                 <select ng-model="setting.property.unit" data-placeholder="Choose" class="form-control"
                                         ng-required="setting.property.required">
-                                    <option value="{{choice}}" ng-repeat="choice in setting.property.units"> {{ choice }}
+                                    <option value="{{choice}}" ng-repeat="choice in setting.property.units"> {{ choice
+                                        }}
                                     </option>
                                 </select>
                             </span> <span class="help-block">{{::setting.property.description}}</span></div>
             </div>
             <!--------- string --------->
-            <div ng-switch-when="string"><label class="col-xs-3 control-label"> {{::setting.property.name}}
-                <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
+            <div ng-switch-when="string"><label class="col-xs-4 control-label"> {{::setting.property.name}}
+                <i ng-if="setting.property.required" class="fa fa-asterisk text-danger"></i> </label>
 
                 <div class="col-xs-6">
                     <input type="text" name="stringInput" class="form-control"
