--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -1,37 +1,35 @@
-<div class="row">
+<div>
     <div class="row">
         <div class="col-xs-5">
             Name
             <div class="row">
-                <input placeholder="name..." ng-model="ctrl.process.name" class="form-control"
+                <input placeholder="name..." ng-model="ctrl.process.name"
                        class="form-control col-xs-8">
             </div>
             Description
             <div class="row">
-                <textarea placeholder="description..." rows="10" ng-model="ctrl.process.what" class="form-control col-xs-8">
+                <textarea placeholder="description..." rows="10" ng-model="ctrl.process.what"
+                          class="form-control col-xs-8">
                 </textarea>
             </div>
             <div class="row">
                 <ul class="list-inline">
                     <li>
                         <button ng-click="ctrl.chooseSamples()"
-                                stylex="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
-                                class="btn btn-default btn-sample"><i
-                                class="fa fa-fw fa-plus"></i> Samples
+                                class="btn btn-default btn-sample">
+                            <i class="fa fa-fw fa-plus"></i> Samples
                         </button>
                     </li>
                     <li>
                         <button ng-click="ctrl.chooseInputFiles()"
-                                stylex="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
-                                class="btn btn-default btn-files"><i
-                                class="fa fa-fw fa-plus"></i> Input Files
+                                class="btn btn-default btn-files">
+                            <i class="fa fa-fw fa-plus"></i> Input Files
                         </button>
                     </li>
                     <li>
                         <button ng-click="ctrl.chooseOutputFiles()"
-                                stylex="border: 3px dotted #d3d3d3;border-radius: 3px;color: #d3d3d3 "
-                                class="btn btn-default btn-files"><i
-                                class="fa fa-fw fa-plus"></i> Output Files
+                                class="btn btn-default btn-files">
+                            <i class="fa fa-fw fa-plus"></i> Output Files
                         </button>
                     </li>
                 </ul>
@@ -59,7 +57,55 @@
         </div>
     </div>
     <hr class="divider">
-    <div ag-grid="ctrl.filesAndSamples" style="height: 100%;" class="ag-blue"></div>
+    <div class="row">
+        <div class="col-xs-12">
+            <table ng-if="ctrl.process.input_samples.length || ctrl.process.input_files.length || ctrl.process.output_files.length"
+                   class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Name</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="sample in ctrl.process.input_samples | orderBy:'name'">
+                    <td>Sample</td>
+                    <td>{{sample.name}}</td>
+                    <td>
+                        <a ng-if="ctrl.process.input_files.length || ctrl.process.output_files.length"
+                           ng-click="ctrl.linkFilesToSample(sample, ctrl.process.input_files, ctrl.process.output_files)">
+                            Link Files
+                        </a>
+                        <ul class="list-unstyled">
+                            <li ng-repeat="file in sample.files">
+                                {{file.name}}
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <a ng-click="ctrl.remove('input_files', sample)">
+                            <i class="fa fa-close"></i>
+                        </a>
+                    </td>
+                </tr>
+                <tr ng-repeat="file in ctrl.process.input_files | orderBy:'name'">
+                    <td>Input File</td>
+                    <td>{{file.name}}</td>
+                    <td></td>
+                    <td><a ng-click="ctrl.remove('input_files', file)"><i class="fa fa-close"></i></a></td>
+                </tr>
+                <tr ng-repeat="file in ctrl.process.output_files | orderBy:'name'">
+                    <td>Output File</td>
+                    <td>{{file.name}}</td>
+                    <td></td>
+                    <td><a ng-click="ctrl.remove('output_files', file)"><i class="fa fa-close"></i></a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 
