--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -14,21 +14,21 @@
 
     <div class="row">
         <ul class="nav nav-tabs">
-            <li ng-class="{active: isActive('all')}">
-                <a ng-click="setActive('all')" class="text-uppercase">All
+            <li class="active">
+                <a data-target="#1" data-toggle="tab" class="text-uppercase">All
                     Processes</a></li>
-            <li ng-class="{active: isActive('favourite')}">
-                <a ng-click="setActive('favourite')" class="text-uppercase">
+            <li>
+                <a data-target="#2" data-toggle="tab" class="text-uppercase">
                     <i class="fa fa-fw fa-star"></i> favourite
                     Processes ({{favourites.length}})</a></li>
-            <li ng-class="{active: isActive('pre-filled')}">
-                <a ng-click="setActive('pre-filled')" class="text-uppercase">
+            <li>
+                <a data-target="#3" data-toggle="tab" class="text-uppercase">
                     <i class="fa fa-fw fa-pencil-square-o"></i>
                     Pre-filled Processes (4)</a></li>
         </ul>
         <div class="modal-body">
-            <div class="tab-content" ng-if="isActive('all')">
-                <div class="tab-pane active">
+            <div class="tab-content">
+                <div class="tab-pane active" id="1">
                     <div class="list-group">
                         <div ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
                              class="pointer list-group-item"
@@ -54,7 +54,7 @@
                                         <button class="btn btn-info" ng-click="viewSetUp(template)">
                                             <i class="fa fa-fw fa-gear"></i>SetUp
                                         </button>
-                                        <button class="btn btn-info" ng-click="preFill(template)"><i
+                                        <button class="btn btn-info" ng-click="openPreFill(template)"><i
                                                 class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
                                         </button>
                                     </div>
@@ -63,33 +63,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" ng-if="isActive('favourite')">
-                    <div class="tab-pane active" id="2">
-                        <div class="list-group">
-                            <div ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
-                                 class="pointer list-group-item"
-                                 ng-repeat="template in favourites | orderBy:'name' | filter:search">
-                                <h4 class="list-group-item-heading">{{template.name}}</h4>
+                <div class="tab-pane" id="2">
+                    <div class="list-group">
+                        <div ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
+                             class="pointer list-group-item"
+                             ng-repeat="template in favourites | orderBy:'name' | filter:search">
+                            <h4 class="list-group-item-heading">{{template.name}}</h4>
 
-                                <ul class="list-unstyled">
-                                    <li>Description: {{template.description}}
-                                    </li>
-                                    <li ng-if="template.does_transform" class="text-danger">
-                                        This template transforms samples.
-                                    </li>
-                                    <li>
-                                        <button class="btn" ng-click="viewSetUp(template)">SetUp</button>
-                                    </li>
+                            <ul class="list-unstyled">
+                                <li>Description: {{template.description}}
+                                </li>
+                                <li ng-if="template.does_transform" class="text-danger">
+                                    This template transforms samples.
+                                </li>
+                                <li>
+                                    <button class="btn" ng-click="viewSetUp(template)">SetUp</button>
+                                </li>
 
-                                </ul>
-                            </div>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane" ng-if="isActive('pre-filled')">
-                    Pre-filled
+                <div class="tab-pane" id="3">
+                    <h3>Pre-filled</h3>
                 </div>
-
             </div>
         </div>
         <div class="modal-footer">
