--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -24,7 +24,7 @@
             <li>
                 <a data-target="#3" data-toggle="tab" class="text-uppercase">
                     <i class="fa fa-fw fa-pencil-square-o"></i>
-                    Pre-filled Processes (4)</a></li>
+                    Pre-filled Processes ({{prefilled.length}})</a></li>
         </ul>
         <div class="modal-body">
             <div class="tab-content">
@@ -44,7 +44,7 @@
                                     </div>
                                 </div>
                                 <div class="col-xs-5">
-                                    <div ng-if="template.isFavorite">
+                                    <div ng-click="removeFromFavourite(template)" ng-if="template.isFavorite">
                                         <i class="fa fa-fw fa-star pull-right"></i>
                                     </div>
                                     <div ng-click="addToFavourite(template)" ng-if="!template.isFavorite">
@@ -68,24 +68,56 @@
                         <div ng-class="{'active': template === selected.item}" ng-click="showDetails(template)"
                              class="pointer list-group-item"
                              ng-repeat="template in favourites | orderBy:'name' | filter:search">
-                            <h4 class="list-group-item-heading">{{template.name}}</h4>
-
-                            <ul class="list-unstyled">
-                                <li>Description: {{template.description}}
-                                </li>
-                                <li ng-if="template.does_transform" class="text-danger">
-                                    This template transforms samples.
-                                </li>
-                                <li>
-                                    <button class="btn" ng-click="viewSetUp(template)">SetUp</button>
-                                </li>
-
-                            </ul>
+                            <div class="row">
+                                <div class="col-xs-7">
+                                    <div class="list-group-item-heading">{{template.name}}</div>
+                                    <div ng-if="template.does_transform">
+                                        <label class="label label-default">Transforms Sample</label>
+                                    </div>
+                                    <div class="row">
+                                        Description: {{template.description}}
+                                    </div>
+                                </div>
+                                <div class="col-xs-5">
+                                    <div class="row">
+                                        <button class="btn btn-info" ng-click="viewSetUp(template)">
+                                            <i class="fa fa-fw fa-gear"></i>SetUp
+                                        </button>
+                                        <button class="btn btn-info" ng-click="openPreFill(template)"><i
+                                                class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="tab-pane" id="3">
-                    <h3>Pre-filled</h3>
+                    <div class="list-group">
+                        <div ng-class="{'active': template === selected.item}" ng-click="choosePrefilledTemplate(template)"
+                             class="pointer list-group-item"
+                             ng-repeat="template in prefilled | orderBy:'name' | filter:search">
+
+                            <div class="row">
+                                <div class="col-xs-7">
+                                    <div class="list-group-item-heading">{{template.name}}</div>
+                                    <div ng-if="template.does_transform">
+                                        <label class="label label-default">Transforms Sample</label>
+                                    </div>
+                                    <div class="row">
+                                        Description: {{template.description}}
+                                    </div>
+                                </div>
+                                <div class="col-xs-5">
+                                    <div class="row">
+                                        <button class="btn btn-info" ng-click="viewPrefilledSetUp(template)">
+                                            <i class="fa fa-fw fa-gear"></i>SetUp
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
