Fix up samples route by adding a list, list.edit and edit routes. Make samples an abstract route. Disable displaying measurements until we support better methods for entering measurement data.

--- a/website/app/application/core/projects/project/project-nav-bar.html
+++ b/website/app/application/core/projects/project/project-nav-bar.html
@@ -41,7 +41,7 @@
             </a>
         </li>
         <li role="presentation" ui-sref-active="active">
-            <a ui-sref="projects.project.samples"
+            <a ui-sref="projects.project.samples.list"
                ui-sref-opts="{reload: true}"
                ng-click="navbar.clearSearch()"
                class="pointer">
