Add simple sample create by launching the "As Received" process.

--- a/website/app/application/core/projects/project/home/home.html
+++ b/website/app/application/core/projects/project/home/home.html
@@ -9,7 +9,7 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li class="text-uppercase"><a ng-click="ctrl.chooseTemplate()">Process</a></li>
-                        <li ng-click="ctrl.chooseTemplate()" class="text-uppercase"><a href="#">Sample</a></li>
+                        <li ng-click="ctrl.createSample()" class="text-uppercase"><a href="#">Sample</a></li>
                         <li ng-if="false" class="text-uppercase"><a href="#">File</a></li>
                         <li ng-if="false" class="text-uppercase"><a href="#">Review</a></li>
                     </ul>
