Add support for going to previous ui-router state.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -81,6 +81,9 @@
 <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
 <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
 <script src="bower_components/restangular/dist/restangular.min.js"></script>
+<script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.core.min.js"></script>
+<script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.previous.min.js"></script>
+<script src="bower_components/ui-router-extras/release/modular/ct-ui-router-extras.transition.min.js"></script>
 <script src="assets/js/flow.js"></script>
 <script src="assets/js/select2.min.js"></script>
 <script src="assets/js/TreeModel-min.js"></script>
