--- a/website/app/index.html
+++ b/website/app/index.html
@@ -235,5 +235,6 @@
 <script src="application/core/projects/project/processes/process-view-controller.js"></script>
 <script src="application/core/projects/project/home/directives/display-sample-controller.js"></script>
 <script src="application/core/components/properties/partials/display-process-name-directive.js"></script>
+<script src="application/core/projects/project/processes/edit/edit-process-controller.js"></script>
 </body>
 </html>
